Fix: top spacing

--- a/src/app/components/opportunity/opportunity-view/opportunity-view.component.scss
+++ b/src/app/components/opportunity/opportunity-view/opportunity-view.component.scss
@@ -1,7 +1,8 @@
 // opportunity inner page style
 
 .o-opportunity-inner-block{
-	width: 100%;
+  width: 100%;
+  padding-top: 3.5%;
 }
 
 .o-opportunity-post-user-detail{
